# full-stack-k3s

./: .gitignore  DEPLOYMENT_CHECKLIST.md  DNS_SETUP_INSTRUCTIONS.md  DOCURALIS_DEPLOYMENT.md  IMMEDIATE_ACTION_ITEMS.md  MIGRATION_SUMMARY.md  MIGRATION_TO_DOCURALIS_COM.md  QUICK_REFERENCE.md  kubeconfig-docuralis.yml  kubeconfig.yml  package-lock.json  package.json
.github/workflows/: backend-ci-cd.yaml  backend-python.yml  ci.yaml  deploy-dev.yaml  deploy-production.yaml  deploy-staging.yaml  docuralis.yml  frontend-ci-cd.yaml  memo-app.yml  nextauth-secret.yml  test-debug.yml
DataNest/: README.md
DataNest/DataNest/: APIService.swift  ContentView.swift  CreateMemoView.swift  DataNestApp.swift  LoginView.swift  MemoDetailView.swift  MemosListView.swift  Models.swift  RegisterView.swift
DataNest/DataNest.xcodeproj/: project.pbxproj
DataNest/DataNestTests/: DataNestTests.swift
DataNest/DataNestUITests/: DataNestUITests.swift  DataNestUITestsLaunchTests.swift
apps/: docker-compose.yml
apps/backend/: Cargo.toml  Dockerfile
apps/backend-python/: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
apps/backend-python/alembic/: README  env.py
apps/backend-python/src/: config.py  database.py  main.py
apps/backend-python/src/api/: deps.py
apps/backend-python/src/api/v1/: __init__.py  auth.py  files.py  rag.py
apps/backend-python/src/core/: exceptions.py  security.py
apps/backend-python/src/models/: __init__.py  file.py  user.py
apps/backend-python/src/repositories/: __init__.py  base.py  file.py  user.py
apps/backend-python/src/schemas/: __init__.py  file.py  rag.py  user.py
apps/backend-python/src/services/: __init__.py  auth.py  file.py  minio.py  qdrant.py  rag.py  redis.py
apps/backend-python/tests/: conftest.py  test_auth.py  test_files.py
apps/backend/migrations/: 003_create_memos.sql  README.md
apps/backend/src/: auth.rs  db.rs  files.rs  main.rs  memos.rs  minio_service.rs  models.rs  qdrant_service.rs  rag.rs  redis_service.rs
apps/docuralis/: .dockerignore  .gitignore  Dockerfile  JUPORTAL_COMPLETE_GUIDE.md  JUPORTAL_INTEGRATION.md  OAUTH_SETUP.md  README.md  auth.config.ts  auth.ts  docker-compose.yml  jest.config.js  jest.config.ts  jest.setup.ts  next.config.ts  package-lock.json  package.json  test_local_query.sh  tsconfig.json
apps/frontend/: Dockerfile  next.config.js  package-lock.json  package.json
argocd/: bastion-app.yaml  network-policies-app.yaml
infra/: .gitignore  .yamllint.yaml  CRITICAL_SETUP.md  DEPLOYMENT_SUMMARY.md  ENVIRONMENTS.md  FULLSTACK_GUIDE.md  GITHUB_SETUP.md  Makefile  QUICKSTART.md  QUICK_START.md  README.md  TROUBLESHOOTING.md
scripts/: argocd-gui.sh  cleanup-old-deployments.sh  deploy-docuralis.sh  grafana-gui.sh  port-forward-services.sh  setup-memo-app-secrets.sh  vault-gui.sh
(+720 files in other folders)
