[package]
name = "k3s-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4"
actix-cors = "0.7"
actix-web-httpauth = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
env_logger = "0.11"
log = "0.4"
dotenv = "0.15"
utoipa = { version = "4.2", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "6.0", features = ["actix-web"] }
chrono = { version = "0.4", features = ["serde"] }

# RAG Application dependencies
actix-multipart = "0.6"
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "uuid", "chrono"] }
uuid = { version = "1.6", features = ["serde", "v4"] }
jsonwebtoken = "9.2"
bcrypt = "0.15"
argon2 = "0.5"
rust-s3 = { version = "0.33", default-features = false, features = ["tokio-rustls-tls"] }
qdrant-client = "1.7"
reqwest = { version = "0.11", features = ["json"] }
futures-util = "0.3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
